# EmployeePayrollManagementSystem

./: epm.sln
epm/: CMakeLists.txt  admin.h  attendance.txt  data.h  employee.h  employees.txt  epm.vcxproj  epm.vcxproj.filters  epm_project.cpp  mainwindow.cpp  mainwindow.h
